--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ input::placeholder {
   color: #f0f7fa;
 }
 
+a {
+  text-decoration: none;
+}
+
 .bg-start {
   position: fixed;
   height: 100%;
@@ -34,14 +38,17 @@ input::placeholder {
   left: 0;
   top: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
   background-color: #20B5F5;
 }
 
+.bg-start__wrap {
+  margin-bottom: 50px;
+}
+
 .bg-start input {
-  margin-right: 20px;
-  
   font-size: 50px;
   text-transform: uppercase;
   border: none;
@@ -50,10 +57,10 @@ input::placeholder {
 }
 
 .bg-start button {
-  border: 0;
   width: 40px;
   height: 40px;
-
+  
+  border: none;
   background-image: url('../img/enter.png');
   background-position: top center;
   background-size: cover;
@@ -85,6 +92,32 @@ input::placeholder {
 
 .bg-start-hidden {
   animation: close-bg 1.5s ease-in forwards;
+}
+
+.table-list__title {
+  margin: 0;
+  margin-bottom: 10px;
+  font-size: 24px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #f0f7fa;
+}
+
+.table-list {
+  max-width: 600px;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.table-list__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.table-list__item a {
+  font-size: 20px;
+  color: #f0f7fa;
 }
 
 .wrapper {
