--- a/css/style.css
+++ b/css/style.css
@@ -57,16 +57,7 @@ a {
 }
 
 .bg-start button {
-  width: 40px;
-  height: 40px;
-  
   border: none;
-  background-image: url('../img/enter.png');
-  background-position: top center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: transparent;
-
   cursor: pointer;
   transition: 0.3s;
 }
@@ -75,6 +66,24 @@ a {
 .bg-start button:active,
 .bg-start button:focus {
   transform: scale(1.2);
+}
+
+.bg-start__wrap button {
+  width: 40px;
+  height: 40px;
+  
+  background-image: url('../img/enter.png');
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: transparent;
+}
+
+.table-list__button {
+  background: #208ef5;
+  color: #f0f7fa;
+  padding: 10px 20px;
+  border-radius: 40px;
 }
 
 @keyframes close-bg {
@@ -108,6 +117,8 @@ a {
   display: flex;
   padding: 0;
   margin: 0;
+  margin-bottom: 40px;
+  
   list-style: none;
 }
 
@@ -251,3 +262,5 @@ a {
   transition: 0.4s;
   background-color: #20B5F5;
 }
+
+
